# active-skill-system

./: .env.example  .gitignore  .riskratchet.json  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/activegraph/: SKILL.md
.agents/skills/compiler-loop/: SKILL.md
.agents/skills/iac-plan-opt/: SKILL.md
.agents/skills/sql-plan-opt/: SKILL.md
.github/workflows/: ci.yml
.pi/: settings.json
.ty/: config.toml
doc/: ROADMAP.md  STATE-SUMMARY.md  activegraph-claims.md  architecture-coverage.md  architecture-proposal-absorb-activegraph.md  architecture-requirements-synthesis.md  architecture-requirements.md  architecture-review.md  architecture-status-activegraph-integration.md  architecture.md  concept.md  dogfood.md  dspy-research.md  idea.md  loop-engineering-synthesis.md  okf-research.md  programbench-research.md  rgla-fast-rlm-research.md  rgla.md  sandbox-isolation-research.md  trace-observability-design.md
harness/: AGENTS.md  __init__.py  loader.py  skill_loader.py
ratchet/: ledger.py
runs/: sql_evolution.20260626T142437273419Z.jsonl
runs/program_bench/program-bench-3a6da956/: json_pretty.py  test_parity.py
runs/program_bench/program-bench-b316ef3d/: json_pretty.py
runs/program_bench/program-bench-c7c251d0/: json_pretty.py  test_parity.py
runs/program_bench/program-bench-fa087323/: json_pretty.py  test_parity.py
runs/sandbox/: sandbox-run-1_cache_types.py  sandbox-run-1ae4af01_cache_types.py  sandbox-run-253bf903_cache_types.py  sandbox-run-350e5c4f_cache_types.py  sandbox-run-69819370_cache_types.py  sandbox-run-6f60d9db_cache_types.py  sandbox-run-a82022dc_cache_types.py
ruvector/: README.md  __init__.py  pyproject.toml
scripts/hooks/: pre-verify.sh
src/active_skill-system/domain/: feature_flag_types.py
src/active_skill_system/: __init__.py
src/active_skill_system/adapters/: __init__.py  activegraph_event_sink.py  activegraph_experiment_workspace.py  async_fork_engine.py  bwrap_executor.py  compiler_tool_stub.py  dspy_strategy.py  event_emitting_behavior_runtime.py  event_emitting_patch_applier.py  event_store_impl.py  fast_rlm_strategy.py  fork_replay_cache_engine.py  iac_tool_stub.py  inmemory_behavior_runtime.py  inmemory_event_log.py  inmemory_llm_cache.py  inmemory_patch_applier.py  inmemory_trace_collector.py  inprocess_executor.py  ladybug_backend.py  ladybug_graph_store.py  log_tool_stub.py  ml_tool_stub.py  native_fork_engine.py  native_replay_engine.py  network_tool_stub.py  pattern_behavior_runtime.py  plain_llm_strategy.py  polyhedral_cost_model.py  relation_behavior_runtime.py  security_tool_stub.py  simple_calc_tool.py  simple_search_tool.py  sql_real_tool.py  sql_tool_stub.py  sqlite_event_log.py  sqlite_llm_cache.py  storage_tool_stub.py  taskgraph_bridge.py
src/active_skill_system/application/: __init__.py  budget_controller.py  evidence_ledger.py  evolution_engine.py  evolvable_adapters.py  iac_transformation_selector.py  idempotency.py  llm_router.py  model_registry.py  model_selector.py  (+6 more)
stubs/ladybug/: query_result.pyi
tests/: _graph_store_conformance.py  conftest.py  test_ci_workflow.py  test_layering.py  test_minimax_provider.py  test_mutation.py
tests/adapters/: test_activegraph_event_sink_replay.py  test_activegraph_experiment_workspace.py  test_async_fork_engine.py  test_behavior_runtime_trace.py  test_bwrap_executor.py  test_compiler_tool_stub.py  test_dspy_strategy.py  test_event_log_backends.py  test_fast_rlm_strategy.py  test_fork_engine.py  test_fork_replay_cache_engine.py  test_iac_tool_stub.py  test_inmemory_behavior_runtime.py  test_ladybug_backend.py  test_ladybug_graph_store.py  test_llm_cache.py  test_minimax_retry.py  test_native_replay_engine.py  test_patch_applier.py  test_pattern_triggers.py  test_polyhedral_cost_model.py  test_provider_mock.py  test_reactive_audit_trail.py  test_relation_triggers.py  test_replay_trace.py  test_security_tool_stub.py  test_sql_real_tool.py  test_sql_tool_stub.py  test_taskgraph_bridge_outbound.py  test_taskgraph_bridge_roundtrip.py  test_tools.py  test_trace_collector.py
tests/application/: test_budget_controller.py  test_cancellation_idempotency.py  test_cross_domain_ranking.py  test_evidence_ledger.py  test_evolution_engine.py  test_evolvable_conformance.py  test_graph_store_port.py  test_llm_router.py  test_llm_router_coverage.py  test_memory_guard.py  test_model_registry_selector.py  test_multi_evolution_engine.py  test_prompt_library.py  test_prompt_registry.py  test_router_model_integration.py  test_sandbox_verifier.py  test_sql_evolvable.py  test_transformation_genome_evolvable.py  test_transformation_selector.py  test_use_case_layering.py  test_verified_tool.py  test_weighted_fitness_aggregator.py
tests/composition/: test_cli_exit.py  test_compiler_evolution.py  test_compiler_evolution_e2e.py  test_diligence.py  test_diligence_m007_end_to_end.py  test_governance_dispatch.py  test_iac_evolution.py  test_log_evolution.py  test_logging_config.py  test_loop_graph_store.py  test_ml_evolution.py  test_multimodal_end_to_end.py  test_network_evolution.py  test_reactive_e2e.py  test_reactive_e2e_wave_d.py  test_reactive_wiring.py  test_security_evolution.py  test_sql_evolution.py  test_sql_evolution_e2e.py  test_sql_evolution_runlog.py  test_storage_evolution.py
tests/domain/: test_api_types.py  test_behavior.py  test_compiler_types.py  test_errors.py  test_evolvable.py  test_feature_flag_types.py  test_fork.py  test_governance_safety.py  test_iac_types.py  test_invariants.py  test_log_types.py  test_loop.py  test_loop_coverage.py  test_loop_graph.py  test_loop_graph_coverage.py  test_ml_types.py  test_model_genome.py  test_network_types.py  test_pattern.py  test_prompt_genome.py  test_property_loop.py  test_provider_health.py  test_reactive_frame.py  test_relation.py  test_sandbox_regression.py  test_security_types.py  test_sql_types.py  test_storage_types.py  test_trajectory.py
tests/harness/: test_agent_harness.py  test_skill_loader.py
tests/ruvector/: test_container.py
tests/scripts/: test_risk_delta.py
(+184 files in other folders)
