[project]
name = "active-skill-system"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "activegraph[llm]",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
activegraph = { path = "../vendor-source/activegraph" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/active_skill_system"]

[project.scripts]
active-skill-diligence = "active_skill_system.composition.diligence:main"

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "import-linter>=2",
    "pyrefly>=1.1.1",
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "pytest-gremlins>=1.8.1",
    "pytest-xdist>=3.8.0",
    "riskratchet>=0.2.12",
    "ruff>=0.15.18",
    "ty>=0.0.52",
]

[tool.importlinter]
root_packages = ["active_skill_system"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Onion/hexagonal layers (inward dependencies only)"
type = "layers"
layers = [
    "active_skill_system.composition",
    "active_skill_system.adapters",
    "active_skill_system.application",
    "active_skill_system.domain",
]

[[tool.importlinter.contracts]]
name = "Domain + application are infra-free"
type = "forbidden"
source_modules = [
    "active_skill_system.domain",
    "active_skill_system.application",
]
forbidden_modules = ["activegraph", "anthropic", "openai"]

# ── ruff (Astral): lint + format ──────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["vendor-source"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["active_skill_system"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── ty (Astral): type checker ─────────────────────────────────────────────
# ty auto-detects the project root + .venv; python version is in [tool.ty.environment].
[tool.ty.environment]
python-version = "3.13"

# ── pyrefly (Meta): type checker ──────────────────────────────────────────
[tool.pyrefly]
python-version = "3.13"
search-path = ["src"]

# ── pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = [
    "error",
    # activegraph.Runtime holds a private ref to its sqlite store; GC cannot
    # close the connection on test teardown. The unraisable warning is benign
    # here — the test data has already been verified. Demote to ignore so
    # filterwarnings=error does not cascade-fail neighbouring tests.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "llm: tests that make real LLM calls (deselected unless --runllm)",
    "slow: long-running tests (e.g. mutation-friendly suites)",
]

# ── hypothesis (property-based) ───────────────────────────────────────────
[tool.hypothesis]
profiles = ["dev", "ci"]

# ── mutmut (mutation testing) ─────────────────────────────────────────────
[tool.mutmut]
source_paths = ["src/active_skill_system"]
runner = "uv run pytest -x -q tests"
# ── pytest-gremlins (mutation testing) ─────────────────────────────
# Run with: uv run pytest --gremlins tests/test_minimax_provider.py
#   --gremlins                       enable
#   --gremlin-cache                  incremental (skip unchanged)
#   --gremlin-parallel               multi-process
#   --gremlin-operators=...          limit to a subset
#   --gremlin-report=html,json       choose report formats
[tool.pytest-gremlins]
paths = [
    "src/active_skill_system/adapters/llm/minimax/_provider.py",
    "src/active_skill_system/application/use_cases/repair_loop.py",
    "src/active_skill_system/application/use_cases/validate_task_graph.py",
    "src/active_skill_system/adapters/simple_calc_tool.py",
    "src/active_skill_system/adapters/simple_search_tool.py",
]
operators = [
    "arithmetic",
    "boolean",
    "boundary",
    "comparison",
]
cache = false
report = ["html", "json"]

[tool.riskratchet]
# Paths to scan. Edit to match your package layout.
paths = ["src"]
# Coverage JSON location (written by `pytest --cov --cov-report=json:coverage.json`).
coverage = "coverage.json"
# Tracked in git so ratchet gate is reproducible across clones.
baseline = ".riskratchet.json"
# CI gate thresholds (from defaults; tighten as the code base stabilizes).
fail_new_above = 50.0
fail_regression_above = 5.0
fail_component_regression_above = 15.0
# Use coverage.json when present; fall back to pessimistic policy otherwise.
missing_coverage = "pessimistic"
# 90-day churn window (matches defaults).
churn_window_days = 90
# Component weights — keep defaults until the code base stabilises.
weights = { coverage_gap = 0.30, structural_complexity = 0.25, branch_gap = 0.15, churn = 0.10, public_surface = 0.10, sprawl = 0.10 }
